# ferristrade

./: Cargo.toml  Dockerfile  README.md
markets/: Cargo.toml
markets/examples/: basic.rs
markets/src/: lib.rs
news/: Cargo.toml
news/examples/: basic.rs  just_update.rs
news/src/: lib.rs
sentiment/: Cargo.toml
src/: app.rs  config.rs  feeds.rs  main.rs  store.rs  ui.rs  utils.rs
src/app/: mod.rs
src/app--/: store.rs
src/ui/: candle_chart.rs  central_panel.rs  left_panel.rs  menu_panel.rs  mod.rs  right_panel.rs
ui/examples/: basic.rs
ui/src/: lib.rs
