[package]
name = "ferristock"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
egui_plot = "0.31.0"
thiserror = "2.0.12"
reqwest = { version = "0.12.12", features = ["blocking"] }
rss = "2.0.12"
tokio = "1.44.0"
