[package]
name = "ferristock"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
  "news",
  "markets",
  "ui",
  "sentiment",
]

[workspace.dependencies]
news = {path="news"}

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
egui_plot = "0.31.0"
thiserror = "2.0.12"
reqwest = { version = "0.12.12", features = ["blocking"] }
rss = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
chrono = "0.4.40"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
news = {workspace = true}

